--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "postcss-loader": "^4.0.4",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^1.9.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -26,8 +28,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
