--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.4.5",
     "core-js": "^3.6.5",
     "postcss-loader": "^4.0.4",
     "register-service-worker": "^1.7.1",
