--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@braid/vue-formulate": "^2.4.5",
+    "@vuelidate/core": "^2.0.0-alpha.8",
+    "@vuelidate/validators": "^2.0.0-alpha.5",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
-    "postcss-loader": "^4.0.4",
+    "postcss": "^7.0.35",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^1.9.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
