--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "tailwindcss": "npx tailwindcss-cli@latest build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -13,6 +14,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.5",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.4",
     "postcss": "^7.0.35",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
